Parser: fixed if expression to throw an error when expression between brackets is missing